First commit: Completed project tiles

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
              alt="Picture of Angela's blog">
       <p class="project-title">Blog site</p></a>
 
-       <a href="" target="_blank" class="project-tile" id="project2"><img
-            class="project-image" src="" alt="">
-      <p class="project-title">Project 2</p></a>
-      <a href="" target="_blank" class="project-tile" id="project3"><img
-            class="project-image" src="" alt="">
-      <p class="project-title">Project 3</p></a>
+       <a href="https://github.com/The-Adam-The/Simple_ROC_trading_bot" target="_blank" class="project-tile" id="project2"><img
+               class="project-image" id="algovibes-image" src="images/algovibes_trading_bot.png" alt="Picture of Code">
+      <p class="project-title">Trading Bot</p></a>
+      <a href="https://github.com/The-Adam-The/personalsite-freecodecamp" target="_blank" class="project-tile" id="project3">
+        <img class="project-image" src="images/personal_site.png" alt="snapshot of personal website">
+      <p class="project-title">Personal Site</p></a>
 
 
 
