Amended base site to be mobile.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <section id="navbar" class="nav">
       <ul class="nav-list">
-        <li><a class="nav-link" href="#about">about</a></li>
+        <li><a class="nav-link" href="#welcome-section">home</a></li>
 
         <li><a class="nav-link" href="#projects">portfolio</a></li>
 
@@ -70,8 +70,7 @@
 
         <div class="icon-grid">
 
-          <a class="icon-link" href="https://github.com/The-Adam-The"><img class="icons" src="images/social-icons/github.png" alt="github link">
-            <p>github</p></a>
+
 
           <a class="icon-link" href="https://www.linkedin.com/in/theadamwhite/"><img class="icons" src="images/social-icons/linkedin-logo.png" alt="linkedin link">
           <p>linkedin</p></a>
@@ -79,7 +78,8 @@
           <p>twitter</p></a>
           <a class="icon-link" href="mailto:adamwhite930@gmail.com"><img class="icons" src="images/social-icons/email.png" alt="email link">
             <p>email</p></a>
-        </div>
+          <a class="icon-link" href="https://github.com/The-Adam-The"><img class="icons" src="images/social-icons/github.png" alt="github link">
+            <p>github</p></a>
       </div>
 
   </div>
