Added desktop sizing.

--- a/index.html
+++ b/index.html
@@ -65,12 +65,10 @@
   <section class="dark-back" id="contact-and-footer">
   <div class="section" id="contact">
     <div id="contact-content">
-      <h1 class="heading orange">let's work together...</h1>
+      <h1 class="heading orange" id="call-action">let's work together...</h1>
 
 
         <div class="icon-grid">
-
-
 
           <a class="icon-link" href="https://www.linkedin.com/in/theadamwhite/"><img class="icons" src="images/social-icons/linkedin-logo.png" alt="linkedin link">
           <p>linkedin</p></a>
