--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
   <section class="white-back section" id="projects">
-    <h2 class="heading orange">These are some of my projects</h2>
+    <h2 class="heading orange">Projects</h2>
     <div class="projects-grid">
 
       <a href="https://github.com/The-Adam-The/angela-blog/tree/master" target="_blank" class="project-tile" id="project1">
